# transparent-poker

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh
.github/workflows/: ci.yaml
config/: players.toml  strategies.toml  tables.toml  theme.toml
config/themes/: dark.toml  dracula.toml  gruvbox.toml  light.toml  nord.toml  papercolor.toml  retro.toml  solarized.toml
docs/: README.md
scenarios/: sample_flop.toml
src/: bank.rs  defaults.rs  embedded_server.rs  game_loop.rs  lib.rs  logging.rs  menu.rs  scenario.rs  table.rs  theme.rs  view.rs
src/ai/: mod.rs  rules.rs
src/config/: mod.rs
src/engine/: adapter.rs  historian.rs  mod.rs  runner.rs
src/events/: mod.rs  transformer.rs  types.rs
src/lobby/: mod.rs
src/net/: client.rs  mod.rs  network_player.rs  protocol.rs  remote_player.rs  server.rs
src/players/: mod.rs  port.rs  remote_player.rs  rules_player.rs  terminal.rs  test_player.rs
src/strategy/: archetype.rs  hand_group.rs  mod.rs  position.rs
src/tui/: game_ui.rs  input.rs  layout.rs  mod.rs  widgets.rs
tests/: integration.rs
