[package]
name = "poker-tui"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/myersm0/poker-terminal"

[[bin]]
name = "tui-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "headless"
path = "src/bin/headless.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[[bin]]
name = "ai-game"
path = "src/bin/ai_game.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rs_poker = { version = "4.1", features = ["arena", "serde"] }
rand = "0.9"
dirs = "5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
